k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semosan-api
  namespace: semosan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semosan-api
  template:
    metadata:
      labels:
        app: semosan-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: semosan-api
          image: ghcr.io/semosan/semosan_be:df57c95757a8e21babee1869ff0eaffa2f086903
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firebase-secret
              mountPath: /etc/firebase
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: firebase-secret
          secret:
            secretName: firebase-secret
