k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semosan-api
  namespace: semosan
spec:
  selector:
    app: semosan-api
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
